--- a/toss_assistant.ipynb
+++ b/toss_assistant.ipynb
@@ -162,7 +162,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "38ce87dc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -489,7 +491,7 @@
     "           'info.toss.decision', 'info.toss.winner', 'info.umpires', 'info.venue',\n",
     "           'Date', 'bowling_team']\n",
     "\n",
-    "# Create a dictionary to map old column names to new column names where 'info.' is removed\n",
+    "# where 'info.' is removed\n",
     "rename_dict = {col: col.replace('info.', '') for col in columns if 'info.' in col}\n",
     "\n",
     "# Renaming the columns in the DataFrame\n",
@@ -503,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the 'Date' column to datetime format without indexing if it's already a string or datetime\n",
+    "# Convert the 'Date' column to datetime format \n",
     "combined_df['Date'] = pd.to_datetime(combined_df['Date'], errors='coerce')"
    ]
   },
@@ -570,13 +572,13 @@
     "# Reorganizing columns to group related data together\n",
     "organized_columns = [\n",
     "    'match_id',\n",
-    "    'Team 1', 'Team 2',  # Grouping team information\n",
-    "    'batting_team', 'bowling_team',  # Further grouping team interaction\n",
-    "    'ball',   # Game progression details\n",
-    "    'batsman', 'bowler', 'runs', 'player_dismissed',  # Delivery-specific details\n",
-    "    'city', 'venue', 'Date',  # Location and time of the match\n",
-    "    'toss_winner', 'toss_decision',  # Toss details\n",
-    "    'match_winner', 'player_of_the_match' # Outcome details\n",
+    "    'Team 1', 'Team 2',  \n",
+    "    'batting_team', 'bowling_team',  \n",
+    "    'ball',   \n",
+    "    'batsman', 'bowler', 'runs', 'player_dismissed',  \n",
+    "    'city', 'venue', 'Date',  \n",
+    "    'toss_winner', 'toss_decision',  \n",
+    "    'match_winner', 'player_of_the_match' \n",
     "\n",
     "]\n",
     "\n",
@@ -591,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop duplicate columns by selecting the first occurrence\n",
+    "# Drop duplicate columns \n",
     "combined_df = combined_df.loc[:,~combined_df.columns.duplicated()]"
    ]
   },
@@ -669,7 +671,7 @@
     "# Drop rows where 'player_of_the_match' is NaN\n",
     "combined_df.dropna(subset=['player_of_the_match'], inplace=True)\n",
     "\n",
-    "# Count the final number of rows to calculate how many were dropped\n",
+    "\n",
     "final_count = combined_df.shape[0]\n",
     "rows_dropped = initial_count - final_count"
    ]
@@ -1244,7 +1246,7 @@
     "combined_df.loc[:, 'run_rate'] = combined_df['current_score'] / (120 - combined_df['balls_left']) * 6\n",
     "combined_df.loc[:, 'wickets_rate'] = combined_df['wickets_left'] / (120 - combined_df['balls_left']) * 6\n",
     "\n",
-    "# Using vectorized operations to create the Pressure Factor\n",
+    "\n",
     "combined_df.loc[:, 'pressure_factor'] = combined_df.apply(\n",
     "    lambda row: row['last_five'] / (10 - row['wickets_left']) if row['wickets_left'] < 10 else row['last_five'],\n",
     "    axis=1\n",
@@ -5569,8 +5571,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d1d56484",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cleaned_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cleaned_df\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m20\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cleaned_df' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "624e0809",
    "metadata": {},
    "outputs": [],
    "source": []
