--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "574dc26a",
+   "id": "06327388",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "09d5c7e5",
+   "id": "2717f961",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "89750f66",
+   "id": "7f0125f9",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "71bb4e40",
+   "id": "2ef41738",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9ae6a978",
+   "id": "7df58769",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1e628a07",
+   "id": "026474c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5992a97d",
+   "id": "df22b4e1",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "de0b591c",
+   "id": "cc7011c4",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8ca63c7e",
+   "id": "acb5cd45",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b427c562",
+   "id": "a56b7151",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3c010498",
+   "id": "58446908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "56df885b",
+   "id": "19cad5f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "936f80d4",
+   "id": "74894ad9",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "51e2ba5d",
+   "id": "8e3584e8",
    "metadata": {},
    "outputs": [
     {
@@ -658,8 +658,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "5bd82ff1",
+   "execution_count": 18,
+   "id": "7cf8118b",
    "metadata": {},
    "outputs": [
     {
@@ -711,8 +711,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "1f8ff9c6",
+   "execution_count": 19,
+   "id": "706738e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,8 +726,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "4dca1827",
+   "execution_count": 20,
+   "id": "b3b55ec4",
    "metadata": {},
    "outputs": [
     {
@@ -761,8 +761,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "2803d9ab",
+   "execution_count": 21,
+   "id": "95430e5a",
    "metadata": {},
    "outputs": [
     {
@@ -867,8 +867,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "f32f24ed",
+   "execution_count": 22,
+   "id": "79d9d71c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,8 +889,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "65bad5ae",
+   "execution_count": 23,
+   "id": "9310fbf1",
    "metadata": {},
    "outputs": [
     {
@@ -933,8 +933,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "8af128b7",
+   "execution_count": 24,
+   "id": "f07cb5d7",
    "metadata": {},
    "outputs": [
     {
@@ -1047,6 +1047,8 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
+    "# Dictionary to store trained pipelines for later use\n",
+    "trained_pipelines = {}\n",
     "\n",
     "# Define features and target\n",
     "features = ['venue', 'team_1', 'team_2', 'toss_winner', 'max_tempC', 'min_tempC', 'sun_hour',\n",
@@ -1109,6 +1111,7 @@
     "        'Test Accuracy': accuracy,\n",
     "        'Classification Report': classification_report(y_test, y_pred)\n",
     "    }\n",
+    "    trained_pipelines[name] = pipeline \n",
     "\n",
     "# Print results\n",
     "for model_name, metrics in results.items():\n",
@@ -1123,8 +1126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "d9fca065",
+   "execution_count": 25,
+   "id": "00acf301",
    "metadata": {},
    "outputs": [
     {
@@ -1213,11 +1216,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "\n",
-    "\n",
-    "\n",
     "# Prepare the features for unseen data just like the training data\n",
     "X_unseen = unseen_data[features]  # Ensure all necessary features are included\n",
     "\n",
@@ -1248,13 +1246,13 @@
     "    print(f\"Accuracy: {metrics['Accuracy on Unseen Data']:.4f}\")\n",
     "    print(\"Classification Report:\")\n",
     "    print(metrics['Classification Report on Unseen Data'])\n",
-    "    print(\"-\" * 50)\n"
+    "    print(\"-\" * 50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd64e5f",
+   "id": "44b53cd3",
    "metadata": {},
    "outputs": [],
    "source": []
